--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="cs/bootstrap.css" rel="stylesheet">
-    <link href="cs/signin.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/signin.css" rel="stylesheet">
     
   </head>
 
