--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     
-    <script src="js/jQuery.validate.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/application.js"></script>
     
 
