--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <form class="form-signin" id="form">
         <h2 class="form-signin-heading">Please sign in</h2>
         <input id="Username" name="username" type="text" 
-        class="input-block-level" placeholder="Email address">
+        class="input-block-level required email" placeholder="Email address">
         <input id="password" name="password" type="password" 
-        class="input-block-level" placeholder="Password">
+        class="input-block-level required" placeholder="Password">
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Remember me
         </label>
